crates/roughly/tests/snapshots/test_format__while_statement__basic.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
while (condition) {
  body
}

while (condition) {
  body
}
