crates/roughly/tests/snapshots/test_format__while_statement__comment_but_no_block.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
while (condition) # 1
{
  body
}
