crates/roughly/tests/snapshots/test_format__while_statement__comments_all_positions.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
while # while
# 1
( # (
  # 2
  condition # condition
  # 3
) # )
# 4
{}
