crates/roughly/tests/snapshots/test_format__while_statement__comments_multiline_condition.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
while (
  # 1
  x && # x
    y # y
  # 2
) {}
