crates/roughly/tests/snapshots/test_format__while_statement__hugging.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
while (condition) {}

while (
  condition
) {}

while (call(
  arg
)) {}

while ({
  expr
}) {}
