crates/roughly/tests/snapshots/test_format__while_statement__hugging_with_comments.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
while ( # 1
  condition
) {}

while (
  condition # 1
) {}

while (
  # 1
  {
    condition
  }
) {}

while (
  {
    condition
  }
  # 1
) {}
